# pyworkshop5

./: .gitignore  README.md  pyproject.toml  report.html
.github/workflows/: playwright.yml
e2e_testing/pages/: cart.py  checkout.py  inventory.py  login.py
e2e_testing/tests/: conftest.py  test_login.py  test_making_order.py  test_shopping_cart.py
