[tool.poetry]
name = "pyworkshop5"
version = "0.1.0"
description = "Repository for python practice in university (5 semester)."
authors = ["Portlex03 <portnyagin924@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
